Remove deprecated code.